Fixing an issue with the cursor on forms on iOS 11
We noticed an issue with forms and the lightbox on the iPhone 6 running iOS 11, seems that the cursor is in the wrong position when there is a form on the lightbox.

I found that if you add position: fixed to the body puts the cursor back in its position, this css fixes that but obviously I can't just add this to my app because it won't validate, so I am pulling this, not sure if it's the correct way that you do things so let me know if you want it differently.

--- a/css/amp.css
+++ b/css/amp.css
@@ -262,6 +262,10 @@ i-amphtml-sizer {
   overflow: hidden !important;
 }
 
+.i-amphtml-scroll-disabled>body {
+  position: fixed !important;
+}
+
 .i-amphtml-scroll-disabled {
   overflow-x: hidden !important;
   overflow-y: hidden !important;
